# profit-calculator

./: Cargo.toml  README.md
apps/Profit Calculator.app/Contents/: Info.plist
apps/Profit Calculator.app/Contents/Resources/: Profit Calculator.icns
src/: main.rs
ui/: appwindow.slint
